tdf#152142 sw: fix RTL as-char anchored textbox positioning

Fixes an issue causing incorrect textbox positions when the containing
shape is anchored 'as character' inside RTL text.

Change-Id: I4a68348b778adbdb893a62a29a1fb31ffbcf55e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172529
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172590